--- a/config/data.yaml
+++ b/config/data.yaml
@@ -24,6 +24,30 @@ certificates:
       keylength: 1024
       hashalg: SHA2
   - certificate: 
+      id: interca2
+      parent: mainca
+      ca: true
+      pkix:
+        commonname: www.bar2.se
+        country: SE
+        organization: test
+        organizationunit: testinterca2
+      keytype: RSA
+      keylength: 1024
+      hashalg: SHA2
+  - certificate: 
+      id: interca3
+      parent: interca2
+      ca: true
+      pkix:
+        commonname: www.bar2.se
+        country: SE
+        organization: test
+        organizationunit: testinterca2
+      keytype: RSA
+      keylength: 1024
+      hashalg: SHA2
+  - certificate: 
       id: client
       parent: interca
       ca: false
@@ -38,4 +62,33 @@ certificates:
       altnames: 
         - www.dront.se 
         - www.fro.se 
-
+  - certificate: 
+      id: client2
+      parent: interca3
+      ca: false
+      pkix:
+        commonname: www.baz.se
+        country: SE
+        organization: test
+        organizationunit: testweb
+      keytype: RSA
+      keylength: 1024
+      hashalg: SHA2
+      altnames: 
+        - www.dront.se 
+        - www.fro.se 
+  - certificate: 
+      id: client3
+      parent: intercaNotPresent
+      ca: false
+      pkix:
+        commonname: www.baz.se
+        country: SE
+        organization: test
+        organizationunit: testweb
+      keytype: RSA
+      keylength: 1024
+      hashalg: SHA2
+      altnames: 
+        - www.dront.se 
+        - www.fro.se 
