moved functions out from main, added commandline argd

--- a/config/data.yaml
+++ b/config/data.yaml
@@ -8,7 +8,7 @@ certificates:
         country: SE
         organization: test
         organizationunit: testca
-      keytype: RSA
+      keytype: P224
       keylength: 1024
       hashalg: SHA2
   - certificate: 
