use correct signatute hash for ecah certificate, do not use certificates with different keys as signer

--- a/assember/_fixtures/data.yaml
+++ b/assember/_fixtures/data.yaml
@@ -1,5 +1,16 @@
 certificates:
   - certificate: 
+      id: maincaecdsa
+      parent: maincaecdsa
+      ca: true
+      pkix:
+        commonname: www.foo.se
+        country: SE
+        organization: test
+        organizationunit: testcaecdsa
+      keytype: P224
+      hashalg: SHA256
+  - certificate: 
       id: mainca
       parent: mainca
       ca: true
@@ -8,8 +19,9 @@ certificates:
         country: SE
         organization: test
         organizationunit: testca
-      keytype: P224
-      hashalg: SHA2
+      keytype: RSA
+      keylength: 1024
+      hashalg: SHA256
   - certificate: 
       id: interca
       parent: mainca
@@ -21,7 +33,7 @@ certificates:
         organizationunit: testinterca
       keytype: RSA
       keylength: 1024
-      hashalg: SHA2
+      hashalg: SHA256
   - certificate: 
       id: interca2
       parent: mainca
@@ -33,7 +45,7 @@ certificates:
         organizationunit: testinterca2
       keytype: RSA
       keylength: 1024
-      hashalg: SHA2
+      hashalg: SHA256
   - certificate: 
       id: interca3
       parent: interca2
@@ -45,7 +57,7 @@ certificates:
         organizationunit: testinterca3
       keytype: RSA
       keylength: 1024
-      hashalg: SHA2
+      hashalg: SHA256
   - certificate: 
       id: client
       parent: interca
@@ -57,7 +69,7 @@ certificates:
         organizationunit: testweb
       keytype: RSA
       keylength: 1024
-      hashalg: SHA2
+      hashalg: SHA256
       altnames: 
         - www.dront.se 
         - www.fro.se 
@@ -72,10 +84,21 @@ certificates:
         organizationunit: testweb2
       keytype: RSA
       keylength: 1024
-      hashalg: SHA2
+      hashalg: SHA256
       altnames: 
         - www.dront.se 
         - www.fro.se 
+  - certificate: 
+      id: clientecdsa
+      parent: maincaecdsa
+      ca: true
+      pkix:
+        commonname: www.bar.se
+        country: SE
+        organization: test
+        organizationunit: webclientecdsa
+      keytype: P224
+      hashalg: SHA256
   - certificate: 
       id: client3
       parent: intercaNotPresent
@@ -87,7 +110,7 @@ certificates:
         organizationunit: testweb
       keytype: RSA
       keylength: 1024
-      hashalg: SHA2
+      hashalg: SHA256
       altnames: 
         - www.dront.se 
         - www.fro.se 
